# pencil

./: .gitignore  .travis.yml  appveyor.yml  common.pri  meson.build
app/: aboutdialog.cpp  meson.build  pencilapplication.cpp
app/src/: aboutdialog.cpp  aboutdialog.h  actioncommands.cpp  actioncommands.h  app_util.h  checkupdatesdialog.cpp  checkupdatesdialog.h  colorbox.cpp  colorbox.h  colorinspector.cpp  colorinspector.h  colorpalettewidget.cpp  colorpalettewidget.h  colorslider.cpp  colorslider.h  colorwheel.cpp  colorwheel.h  displayoptionwidget.cpp  displayoptionwidget.h  doubleprogressdialog.cpp  doubleprogressdialog.h  errordialog.cpp  errordialog.h  exportimagedialog.cpp  exportimagedialog.h  exportmoviedialog.cpp  exportmoviedialog.h  filedialogex.cpp  filedialogex.h  importexportdialog.cpp  importexportdialog.h  importimageseqdialog.cpp  importimageseqdialog.h  importlayersdialog.cpp  importlayersdialog.h  importpositiondialog.cpp  importpositiondialog.h  main.cpp  mainwindow2.cpp  mainwindow2.h  (+28 more)
app/ui/: mainwindow2.ui
core_lib/: core_lib.pro  meson.build
core_lib/src/: activeframepool.cpp  activeframepool.h  canvaspainter.cpp  canvaspainter.h  corelib-pch.h  movieexporter.cpp  movieexporter.h  movieexporter2.cpp  movieexporter2.h  movieimporter.cpp  movieimporter.h  qminiz.cpp  qminiz.h  selectionpainter.cpp  selectionpainter.h  soundplayer.cpp  soundplayer.h
core_lib/src/graphics/bitmap/: bitmapimage.cpp  bitmapimage.h
core_lib/src/graphics/vector/: bezierarea.cpp  bezierarea.h  beziercurve.cpp  beziercurve.h  colorref.cpp  colorref.h  vectorimage.cpp  vectorimage.h  vectorselection.cpp  vectorselection.h  vertexref.cpp  vertexref.h
core_lib/src/interface/: backgroundwidget.cpp  backgroundwidget.h  backupelement.h  basedockwidget.cpp  basedockwidget.h  editor.cpp  editor.h  flowlayout.cpp  recentfilemenu.cpp  recentfilemenu.h  scribblearea.cpp  scribblearea.h  timecontrols.cpp  timecontrols.h  timeline.cpp  timeline.h  timelinecells.cpp  timelinecells.h
core_lib/src/managers/: basemanager.cpp  basemanager.h  colormanager.cpp  colormanager.h  layermanager.cpp  layermanager.h  playbackmanager.cpp  playbackmanager.h  preferencemanager.cpp  preferencemanager.h  selectionmanager.cpp  selectionmanager.h  soundmanager.cpp  soundmanager.h  toolmanager.cpp  toolmanager.h  viewmanager.cpp  viewmanager.h
core_lib/src/structure/: camera.cpp  camera.h  filemanager.cpp  filemanager.h  keyframe.cpp  keyframe.h  layer.cpp  layer.h  layerbitmap.cpp  layerbitmap.h  layercamera.cpp  layercamera.h  layersound.cpp  layersound.h  layervector.cpp  layervector.h  object.cpp  object.h  objectdata.cpp  objectdata.h  soundclip.cpp  soundclip.h
core_lib/src/tool/: basetool.cpp  basetool.h  brushtool.cpp  brushtool.h  buckettool.cpp  buckettool.h  erasertool.cpp  erasertool.h  eyedroppertool.cpp  eyedroppertool.h  handtool.cpp  handtool.h  movetool.cpp  movetool.h  penciltool.cpp  penciltool.h  pentool.cpp  pentool.h  polylinetool.cpp  polylinetool.h  selecttool.cpp  selecttool.h  smudgetool.cpp  smudgetool.h  strokemanager.cpp  strokemanager.h  stroketool.cpp  stroketool.h
core_lib/src/util/: blitrect.cpp  blitrect.h  bspline.cpp  colordictionary.h  fileformat.cpp  fileformat.h  log.cpp  log.h  mathutils.h  movemode.h  pencildef.h  pencilerror.cpp  pencilerror.h  pencilsettings.cpp  pencilsettings.h  pointerevent.cpp  pointerevent.h  util.cpp  util.h
core_lib/util/: pencilerror.cpp
subprojects/: quazip.wrap
tests/src/: main.cpp  test_bitmapimage.cpp  test_colormanager.cpp  test_filemanager.cpp  test_layer.cpp  test_layermanager.cpp  test_object.cpp  test_viewmanager.cpp
util/: after-build.sh  mkappimage.sh
